[gd_scene load_steps=5 format=3 uid="uid://6r70bh3i3hcd"]

[ext_resource type="Theme" uid="uid://cquy46qi6nrmx" path="res://assets/game/ui/game_theme.tres" id="1_4tgfe"]
[ext_resource type="Script" uid="uid://dv2ej1bvlu3ys" path="res://assets/game/ui/action_ui.gd" id="2_iwm7g"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4tgfe"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_iwm7g"]

[node name="ActionUI" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_4tgfe")
script = ExtResource("2_iwm7g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -64.5
offset_right = -32.0
offset_bottom = 64.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_4tgfe")
theme_override_constants/separation = 8

[node name="BuildButton" type="FoldableContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("1_4tgfe")
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 32
theme_override_icons/expanded_arrow = SubResource("CompressedTexture2D_4tgfe")
theme_override_icons/folded_arrow = SubResource("CompressedTexture2D_iwm7g")
folded = true
title = "Build"
title_alignment = 1

[node name="StructureList" type="VBoxContainer" parent="VBoxContainer/BuildButton"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_4tgfe")

[node name="TradeButton" type="FoldableContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("1_4tgfe")
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 32
theme_override_icons/expanded_arrow = SubResource("CompressedTexture2D_4tgfe")
theme_override_icons/folded_arrow = SubResource("CompressedTexture2D_iwm7g")
folded = true
title = "Trade"
title_alignment = 1

[node name="StructureList" type="VBoxContainer" parent="VBoxContainer/TradeButton"]
visible = false
layout_mode = 2
theme = ExtResource("1_4tgfe")

[node name="Button" type="Button" parent="VBoxContainer/TradeButton/StructureList"]
layout_mode = 2
text = "Everyone"

[node name="Button2" type="Button" parent="VBoxContainer/TradeButton/StructureList"]
layout_mode = 2
text = "Specific Player"

[node name="Button3" type="Button" parent="VBoxContainer/TradeButton/StructureList"]
layout_mode = 2
text = "No one"

[connection signal="folding_changed" from="VBoxContainer/BuildButton" to="." method="_on_build_button_folding_changed"]
